Edição de Layout

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,18 +4,18 @@
     <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
-                    <i class="fa-solid fa-utensils"></i>
-                    <span>Django World</span>
+                <a class="main-logo" href="/">
+                    <i class="fa-solid fa-utensils main-logo-icon"></i>
+                    <span class="main-logo-text">Recipes</span>
                 </a>
             </h1>
-            <h2><i class="fa-solid fa-user-secret"></i>
-                - Nome: {{ nome }} <br>
-                <i class="fa-solid fa-calendar-days"></i>
-                - Idade: {{ idade }}
-            </h2>
         </div>
     </header>
+    <h2><i class="fa-solid fa-user-secret"></i>
+        - Nome: {{ nome }} <br>
+        <i class="fa-solid fa-calendar-days"></i>
+        - Idade: {{ idade }}
+    </h2>
 </body>
 
 </html>
