Criando grid de conteúdo

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,15 +3,13 @@
 <body>
 
     {% include 'recipes/partials/header.html' %}
+    {% include 'recipes/partials/search.html' %}
 
-    <div class="search-container">
-        <div class="container">
-            <form action="" class="search-form">
-                <input type="search" class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+
         </div>
-    </div>
+    </main>
 
     <h1><i class="fa-solid fa-user-secret"></i> - Nome: {{ nome }} <br>
         <i class="fa-solid fa-calendar-days"></i> - Idade: {{ idade }}
