--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -15,6 +15,34 @@
                 <div class="recipe-cover">
                     <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
                 </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit.</h2>
+                </div>
+                
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                            Gabriel Vanni
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        10/02/2023 às 12:34
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptas quas praesentium autem eligendi molestias! Quia obcaecati consequuntur doloribus corrupti? Sed commodi iste suscipit iure.</p>
+                </div>
+
+                
             </div>
         </div>
     </main>
