--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -11,6 +11,7 @@
     
     <main class="main-content-container">
         <div class="main-content main-content-list container">
+
             <div class="recipe recipe-list-item">
                 <div class="recipe-cover">
                     <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
@@ -42,8 +43,30 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptas quas praesentium autem eligendi molestias! Quia obcaecati consequuntur doloribus corrupti? Sed commodi iste suscipit iure.</p>
                 </div>
 
-                
+                <div class="recipe-meta-container">
+                    <div class="recipe-meta recipe-preparation">
+                        <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
+                        <div class="recipe-meta-text">
+                            0 minutos
+                        </div>
+                    </div>
+                    <div class="recipe-meta recipe-servings">
+                        <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+                        <div class="recipe-meta-text">
+                            0 Porções
+                        </div>
+                    </div>
+                </div>
+
+                <footer class="recipe-footer">
+                    <a href="/" class="recipe-read-more button button-dark button-full-width">
+                        <i class="fas fa-eye"></i>
+                        <span>ver mais...</span>
+                    </a>
+                </footer>
+
             </div>
+
         </div>
     </main>
     <!--EXEMPLO DE VARIAVEL E ÍCONES NO HTML
