--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -13,6 +13,12 @@
         <div class="main-content main-content-list container">
 
            {% include 'recipes/partials/recipe.html' %}
+           {% include 'recipes/partials/recipe.html' %}
+           {% include 'recipes/partials/recipe.html' %}
+           {% include 'recipes/partials/recipe.html' %}
+           {% include 'recipes/partials/recipe.html' %}
+           {% include 'recipes/partials/recipe.html' %}
+            
           
         </div>
     </main>
