--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,32 +1,14 @@
-<!--HEADER-->
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %}
 
-<body>
+{% block title %}Home | {% endblock title %}
 
-    <!--HEADER-->
-    {% include 'recipes/partials/header.html' %}
-
-    <!--BARRA DE PESQUISA-->
-    {% include 'recipes/partials/search.html' %}
-    
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
-
-           {% include 'recipes/partials/recipe.html' %}
-           {% include 'recipes/partials/recipe.html' %}
-           {% include 'recipes/partials/recipe.html' %}
-           {% include 'recipes/partials/recipe.html' %}
-           {% include 'recipes/partials/recipe.html' %}
-           {% include 'recipes/partials/recipe.html' %}
-            
-          
-        </div>
-    </main>
-    
-    <!--EXEMPLO DE VARIAVEL E ÍCONES NO HTML
-        {% include 'recipes/partials/present.html' %}-->
-
-    {% include 'recipes/partials/footer.html' %}
-
-</body>
-</html>
+{% block content %}
+<div class="main-content main-content-list container">
+    {% include 'recipes/partials/recipe.html' %}
+    {% include 'recipes/partials/recipe.html' %}
+    {% include 'recipes/partials/recipe.html' %}
+    {% include 'recipes/partials/recipe.html' %}
+    {% include 'recipes/partials/recipe.html' %}
+    {% include 'recipes/partials/recipe.html' %}
+</div>
+{% endblock %}
